Bug 161500 - dolphin "close tab" icon works too much
Summary: dolphin "close tab" icon works too much
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Compiled Sources Linux
: HI normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-05-01 16:04 UTC by FiNeX
Modified: 2008-05-12 10:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
close tabs icon problem (20.55 KB, image/png)
2008-05-01 16:05 UTC, FiNeX
Details

Note You need to log in before you can comment on or make changes to this bug.
Description FiNeX 2008-05-01 16:04:29 UTC
Version:           Revision 802927 (using Devel)
Installed from:    Compiled sources
OS:                Linux

This bug is hard to explain, a picture will explain better than words.
Anyway:
1) start dolphin
2) open some tabs
3) open a new tab double clicking on the free space after tabs exactly where the "close tab" icon will appear after the tab creation

The new tab is opened and closed immediatly. It seems the click action trigger the "close tab" action.
Comment 1 FiNeX 2008-05-01 16:05:12 UTC
Created attachment 24589 [details]
close tabs icon problem

This should help :)
Comment 2 FiNeX 2008-05-01 16:06:04 UTC
I've set the priority to "HI" because it's easy to open/close tabs in this way.
Comment 3 András Manţia 2008-05-06 08:59:18 UTC
Similar happens if there are many tabs opened, and you click on the last, partially visible tab. If you click on the place where the close button will appear after the tab becomes completely visible, the tab is closed.
Comment 4 Peter Penz 2008-05-07 20:56:42 UTC
SVN commit 805161 by ppenz:

Fixed issue that the tab gets accidentally closed if the mouse cursor is above the close button during the release-event, although the close button got no pressed-event.

(if similar kind of issues happen in future, it might me better to implement the close buttons as own widgets)

BUG: 161500

 M  +6 -2      ktabbar.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=805161
Comment 5 FiNeX 2008-05-12 10:32:21 UTC
Thanks Peter.