Fixed issue that the tab gets accidentally closed if the mouse cursor is above the close button during the release-event, although the close button got no pressed-event.

(if similar kind of issues happen in future, it might me better to implement the close buttons as own widgets)

BUG: 161500

svn path=/trunk/KDE/kdelibs/; revision=805161